--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,12 @@
     -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inspiration&family=Lato:wght@300&family=Montserrat:wght@300;400&family=Oswald&family=PT+Sans+Narrow&family=Palette+Mosaic&family=Poppins:wght@400;500;600&family=Quattrocento&family=Raleway:wght@500;700&family=Rubik&family=Syne+Mono&display=swap"
+    rel="stylesheet">
   <title>RKK TUTION</title>
 </head>
 
