--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inspiration&family=Lato:wght@300&family=Montserrat:wght@300;400&family=Oswald&family=PT+Sans+Narrow&family=Palette+Mosaic&family=Poppins:wght@400;500;600&family=Quattrocento&family=Raleway:wght@500;700&family=Rubik&family=Syne+Mono&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Aboreto&family=Merriweather&family=Montserrat:wght@300;400&display=swap"
     rel="stylesheet">
   <title>RKK TUTION</title>
 </head>
